# ec_dir

./: .gitignore  CMakeLists.txt  README.md  patent.md
ecEncode/: CMakeLists.txt
lib/isa-l/erasure_code/: erasure_code_perf.c
src/: IsaEC.cpp  IsaEC.hpp
test/: channel_test.cpp  encode_ptr.cpp  encode_vec.cpp  erasure_code_perf.c  isa_ben.c  multi_thread.cpp  para_ssd_read.cpp  para_ssd_write.cpp  ptr_test.cpp  single_ssd.cpp  ssd_write.cpp  stat_stripe.cpp  strip_wise.cpp  strip_wise_encode.cpp  stripe_scheduler.cpp  stripe_wise.cpp  stripe_wise_32M.cpp  testEC.cpp  test_scheduler.cpp  using_record_cpu.cpp  using_stat_all.cpp  using_stat_all_stripe.cpp  wsc_test.cpp
